kubernetes/apps/database/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cross-namespace-ingress
spec:
  description: "Allow ingress from app namespaces that use postgres and dragonfly"
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
        - matchLabels:
            io.kubernetes.pod.namespace: downloads
        - matchLabels:
            io.kubernetes.pod.namespace: home
        - matchLabels:
            io.kubernetes.pod.namespace: default
        - matchLabels:
            io.kubernetes.pod.namespace: ai
        - matchLabels:
            io.kubernetes.pod.namespace: games
        - matchLabels:
            io.kubernetes.pod.namespace: infrastructure
        - matchLabels:
            io.kubernetes.pod.namespace: security
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
        - matchLabels:
            io.kubernetes.pod.namespace: network
